--- a/icons/chevron-right/index.html
+++ b/icons/chevron-right/index.html
@@ -747,7 +747,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   <pre><code class="ri-code-block">&lt;svg xmlns=&quot;http://www.w3.org/2000/svg&quot; width=&quot;16&quot; height=&quot;16&quot; viewBox=&quot;0 0 16 16&quot;&gt;
   &lt;path fill=&quot;currentColor&quot; d=&quot;M5.5,15a1,1,0,0,1-.77-1.64L9.2,8,4.73,2.64A1,1,0,0,1,6.27,1.36L11.13,7.2a1.25,1.25,0,0,1,0,1.61L6.27,14.64A1,1,0,0,1,5.5,15ZM9.6,8.48h0Zm0-1h0Z&quot;/&gt;
 &lt;/svg&gt;</code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-chevron-right.svg">Download SVG<span class="rvt-sr-only">, chevron right icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-chevron-right.svg">Download SVG<span class="rvt-sr-only">, chevron right icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
