--- a/icons/credit-card/index.html
+++ b/icons/credit-card/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M15,1.95H1A1.05,1.05,0,0,0-.05,3V13A1.05,1.05,0,0,0,1,14.05H15A1.05,1.05,0,0,0,16.05,13V3A1.05,1.05,0,0,0,15,1.95Zm-1.05,10H2.05V8H11a1,1,0,0,0,0-2H2.05V4.05H13.95Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-credit-card.svg">Download SVG<span class="rvt-sr-only">, credit card icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-credit-card.svg">Download SVG<span class="rvt-sr-only">, credit card icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
