--- a/icons/flag/index.html
+++ b/icons/flag/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M13.28,8.7l-2.81-2,2.74-2.53A1.25,1.25,0,0,0,12.36,2H4A1,1,0,0,0,2,2V15a1,1,0,0,0,2,0V11h8.56a1.25,1.25,0,0,0,.73-2.27ZM10.21,9H4V4h6.45L7.31,6.9Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-flag.svg">Download SVG<span class="rvt-sr-only">, flag icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-flag.svg">Download SVG<span class="rvt-sr-only">, flag icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
