--- a/icons/lock-closed/index.html
+++ b/icons/lock-closed/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M12.75,6H12V4A4,4,0,0,0,4,4V6H3.25A1.25,1.25,0,0,0,2,7.25v7.5A1.25,1.25,0,0,0,3.25,16h9.5A1.25,1.25,0,0,0,14,14.75V7.25A1.25,1.25,0,0,0,12.75,6ZM6,4a2,2,0,0,1,4,0V6H6Zm6,10H4V8h8Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-lock-closed.svg">Download SVG<span class="rvt-sr-only">, lock closed icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-lock-closed.svg">Download SVG<span class="rvt-sr-only">, lock closed icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
