--- a/icons/lock-open/index.html
+++ b/icons/lock-open/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M12,0A4,4,0,0,0,8,4V6H1.25A1.25,1.25,0,0,0,0,7.25v7.5A1.25,1.25,0,0,0,1.25,16h9.5A1.25,1.25,0,0,0,12,14.75V7.25A1.25,1.25,0,0,0,10.75,6H10V4a2,2,0,0,1,4,0V7a1,1,0,0,0,2,0V4A4,4,0,0,0,12,0ZM10,14H2V8h8Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-lock-open.svg">Download SVG<span class="rvt-sr-only">, lock open icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-lock-open.svg">Download SVG<span class="rvt-sr-only">, lock open icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
