--- a/icons/magnifying-glass/index.html
+++ b/icons/magnifying-glass/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M15.71,14.29,10.89,9.47a6,6,0,1,0-1.42,1.42l4.82,4.82a1,1,0,0,0,1.42,0A1,1,0,0,0,15.71,14.29ZM6,10a4,4,0,1,1,4-4A4,4,0,0,1,6,10Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-magnifying-glass.svg">Download SVG<span class="rvt-sr-only">, magnifying glass icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-magnifying-glass.svg">Download SVG<span class="rvt-sr-only">, magnifying glass icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
