--- a/icons/redo/index.html
+++ b/icons/redo/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M13,1a1,1,0,0,0-1,1V3.21A6.68,6.68,0,1,0,7.68,15a1,1,0,0,0,0-2A4.68,4.68,0,1,1,11,5H9A1,1,0,0,0,9,7h4a1,1,0,0,0,1-1V2A1,1,0,0,0,13,1Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-redo.svg">Download SVG<span class="rvt-sr-only">, redo icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-redo.svg">Download SVG<span class="rvt-sr-only">, redo icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
