--- a/icons/star-solid/index.html
+++ b/icons/star-solid/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M15.61,5.53a1,1,0,0,0-.81-.68l-4.08-.6L8.9.56a1,1,0,0,0-1.8,0L5.28,4.25l-4.08.6a1,1,0,0,0-.56,1.7l3,2.88-.7,4.06a1,1,0,0,0,.4,1,1,1,0,0,0,1,.08L8,12.63l3.65,1.92a1.11,1.11,0,0,0,.46.11,1,1,0,0,0,.59-.19,1,1,0,0,0,.4-1l-.7-4.06,3-2.88A1,1,0,0,0,15.61,5.53Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-star-solid.svg">Download SVG<span class="rvt-sr-only">, star solid icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-star-solid.svg">Download SVG<span class="rvt-sr-only">, star solid icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
