--- a/icons/arrow-down/index.html
+++ b/icons/arrow-down/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M12.71,10.29a1,1,0,0,0-1.41,0L9,12.59V1A1,1,0,0,0,7,1V12.59L4.71,10.29a1,1,0,0,0-1.41,1.41l4,4a1,1,0,0,0,1.42,0l4-4A1,1,0,0,0,12.71,10.29Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-arrow-down.svg">Download SVG<span class="rvt-sr-only">, arrow down icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-arrow-down.svg">Download SVG<span class="rvt-sr-only">, arrow down icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
