--- a/icons/arrow-left/index.html
+++ b/icons/arrow-left/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M15,7H3.41L5.71,4.71A1,1,0,0,0,4.29,3.29l-4,4a1,1,0,0,0,0,1.42l4,4a1,1,0,0,0,1.41-1.41L3.41,9H15a1,1,0,1,0,0-2Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-arrow-left.svg">Download SVG<span class="rvt-sr-only">, arrow left icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-arrow-left.svg">Download SVG<span class="rvt-sr-only">, arrow left icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
