--- a/icons/arrow-up/index.html
+++ b/icons/arrow-up/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M12.71,4.29l-4-4a1,1,0,0,0-1.42,0l-4,4A1,1,0,1,0,4.71,5.71L7,3.41V15a1,1,0,0,0,2,0V3.41l2.29,2.29a1,1,0,0,0,1.41-1.41Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-arrow-up.svg">Download SVG<span class="rvt-sr-only">, arrow up icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-arrow-up.svg">Download SVG<span class="rvt-sr-only">, arrow up icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
