--- a/icons/ban/index.html
+++ b/icons/ban/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M8,0a8,8,0,1,0,8,8A8,8,0,0,0,8,0Zm6,8a6,6,0,0,1-1.11,3.47L4.53,3.11A6,6,0,0,1,14,8ZM2,8A6,6,0,0,1,3.11,4.53l8.36,8.36A6,6,0,0,1,2,8Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-ban.svg">Download SVG<span class="rvt-sr-only">, ban icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-ban.svg">Download SVG<span class="rvt-sr-only">, ban icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
