--- a/icons/circle-solid/index.html
+++ b/icons/circle-solid/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M16,8A8,8,0,1,1,8,0,8,8,0,0,1,16,8Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-circle-solid.svg">Download SVG<span class="rvt-sr-only">, circle solid icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-circle-solid.svg">Download SVG<span class="rvt-sr-only">, circle solid icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
