--- a/icons/circle/index.html
+++ b/icons/circle/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M8.12,16a8,8,0,0,1-8-8,8,8,0,0,1,8-8,8,8,0,0,1,8,8A8,8,0,0,1,8.12,16Zm0-13.71A5.65,5.65,0,0,0,2.41,8a5.65,5.65,0,0,0,5.71,5.71A5.65,5.65,0,0,0,13.83,8,5.65,5.65,0,0,0,8.12,2.29Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-circle.svg">Download SVG<span class="rvt-sr-only">, circle icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-circle.svg">Download SVG<span class="rvt-sr-only">, circle icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
