--- a/icons/close-circle-solid/index.html
+++ b/icons/close-circle-solid/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M8,0a8,8,0,1,0,8,8A8,8,0,0,0,8,0Zm3.71,10.29a1,1,0,1,1-1.41,1.41L8,9.41,5.71,11.71a1,1,0,0,1-1.41-1.41L6.59,8,4.29,5.71A1,1,0,0,1,5.71,4.29L8,6.59l2.29-2.29a1,1,0,0,1,1.41,1.41L9.41,8Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-close-circle-solid.svg">Download SVG<span class="rvt-sr-only">, close circle solid icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-close-circle-solid.svg">Download SVG<span class="rvt-sr-only">, close circle solid icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
