--- a/icons/close/index.html
+++ b/icons/close/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M9.41,8l5.29-5.29a1,1,0,0,0-1.41-1.41L8,6.59,2.71,1.29A1,1,0,0,0,1.29,2.71L6.59,8,1.29,13.29a1,1,0,1,0,1.41,1.41L8,9.41l5.29,5.29a1,1,0,0,0,1.41-1.41Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-close.svg">Download SVG<span class="rvt-sr-only">, close icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-close.svg">Download SVG<span class="rvt-sr-only">, close icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
