--- a/icons/filter/index.html
+++ b/icons/filter/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M5.25,14.88A1.25,1.25,0,0,1,4,13.63V8.31L.24,2.76A1.25,1.25,0,0,1,1.38,1H14.58a1.25,1.25,0,0,1,1.09,1.86L15.55,3,11,8.37v2.49a1.24,1.24,0,0,1-.59,1.06L5.71,14.79A1.25,1.25,0,0,1,5.25,14.88ZM2.81,3,6,7.69v4.59l3-1.84V7.63L12.94,3Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-filter.svg">Download SVG<span class="rvt-sr-only">, filter icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-filter.svg">Download SVG<span class="rvt-sr-only">, filter icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
