--- a/icons/heart-solid/index.html
+++ b/icons/heart-solid/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M8,14.52a1,1,0,0,1-.71-.3L1.38,8.33a4.29,4.29,0,0,1,0-6.07,4.3,4.3,0,0,1,6.07,0L8,2.79l.52-.53a4.3,4.3,0,0,1,6.07,0h0a4.23,4.23,0,0,1,1.26,3,4.21,4.21,0,0,1-1.26,3L8.68,14.22A1,1,0,0,1,8,14.52Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-heart-solid.svg">Download SVG<span class="rvt-sr-only">, heart solid icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-heart-solid.svg">Download SVG<span class="rvt-sr-only">, heart solid icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
