--- a/icons/lightning/index.html
+++ b/icons/lightning/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M12.9,6.6A1,1,0,0,0,12,6H8.6l2.3-4.6A1,1,0,0,0,10.5.1,1.1,1.1,0,0,0,9.2.4l-6,8a.9.9,0,0,0-.1,1A1,1,0,0,0,4,10H7.4L5.1,14.6a1,1,0,0,0,.4,1.3H6a.9.9,0,0,0,.8-.4l6-8A.9.9,0,0,0,12.9,6.6Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-lightning.svg">Download SVG<span class="rvt-sr-only">, lightning icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-lightning.svg">Download SVG<span class="rvt-sr-only">, lightning icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
