--- a/icons/megaphone/index.html
+++ b/icons/megaphone/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M15,6.09V1A1,1,0,0,0,13.4.2L9.67,3H4A4,4,0,0,0,0,7a3.92,3.92,0,0,0,3.41,3.94l-1.3,2.61a1,1,0,0,0,1.78.9L5.62,11H9.67l3.73,2.8a1,1,0,0,0,1,.09A1,1,0,0,0,15,13V8.91a1.49,1.49,0,0,0,0-2.82ZM4,9A1.94,1.94,0,0,1,2,7,1.94,1.94,0,0,1,4,5Zm9,2L10.33,9H6V5h4.33L13,3Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-megaphone.svg">Download SVG<span class="rvt-sr-only">, megaphone icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-megaphone.svg">Download SVG<span class="rvt-sr-only">, megaphone icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
