--- a/icons/minus/index.html
+++ b/icons/minus/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M14,9H2A1,1,0,0,1,2,7H14a1,1,0,0,1,0,2Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-minus.svg">Download SVG<span class="rvt-sr-only">, minus icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-minus.svg">Download SVG<span class="rvt-sr-only">, minus icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
