--- a/icons/note/index.html
+++ b/icons/note/index.html
@@ -753,7 +753,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;/g&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-note.svg">Download SVG<span class="rvt-sr-only">, note icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-note.svg">Download SVG<span class="rvt-sr-only">, note icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
