--- a/icons/pencil/index.html
+++ b/icons/pencil/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M14.62,4.19,11.74,1.34a1.1,1.1,0,0,0-1.55,0L0,11.62,0,16l4.45,0L14.64,5.73A1.1,1.1,0,0,0,14.62,4.19ZM3.62,14H2V12.44l6-6L9.58,8ZM11,6.57,9.4,5,11,3.4,12.57,5Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-pencil.svg">Download SVG<span class="rvt-sr-only">, pencil icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-pencil.svg">Download SVG<span class="rvt-sr-only">, pencil icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
