--- a/icons/play/index.html
+++ b/icons/play/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M2.25,14.85A1.25,1.25,0,0,1,1,13.6V2.4A1.25,1.25,0,0,1,2.81,1.29L14,6.88a1.25,1.25,0,0,1,0,2.24L2.81,14.71A1.25,1.25,0,0,1,2.25,14.85ZM3,3.62v8.76L11.76,8ZM13.1,8.67h0Zm0-1.34h0Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-play.svg">Download SVG<span class="rvt-sr-only">, play icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-play.svg">Download SVG<span class="rvt-sr-only">, play icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
