--- a/icons/save/index.html
+++ b/icons/save/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M10.41,1H2.25A1.25,1.25,0,0,0,1,2.25v11.5A1.25,1.25,0,0,0,2.25,15h11.5A1.25,1.25,0,0,0,15,13.75V5.59ZM10,13H6V11h4Zm3,0H12V10.25A1.25,1.25,0,0,0,10.75,9H5.25A1.25,1.25,0,0,0,4,10.25V13H3V3H5V5.75A1.25,1.25,0,0,0,6.25,7H9A1,1,0,0,0,9,5H7V3H9.59L13,6.41Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-save.svg">Download SVG<span class="rvt-sr-only">, save icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-save.svg">Download SVG<span class="rvt-sr-only">, save icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
