--- a/icons/sidebyside/index.html
+++ b/icons/sidebyside/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M14.52,0H1.37A1.48,1.48,0,0,0,0,1.37V14.52A1.49,1.49,0,0,0,1.37,16H14.63A1.49,1.49,0,0,0,16,14.52V1.37A1.49,1.49,0,0,0,14.52,0ZM2.29,2.29H6.86V13.72H2.29ZM13.72,13.72H9.14V2.29h4.58Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-sidebyside.svg">Download SVG<span class="rvt-sr-only">, sidebyside icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-sidebyside.svg">Download SVG<span class="rvt-sr-only">, sidebyside icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
