--- a/icons/star/index.html
+++ b/icons/star/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M12.11,14.66a1.11,1.11,0,0,1-.46-.11L8,12.63,4.35,14.55a1,1,0,0,1-1-.08,1,1,0,0,1-.4-1l.7-4.06-3-2.88a1,1,0,0,1,.56-1.7l4.08-.6L7.1.56a1,1,0,0,1,1.8,0l1.82,3.69,4.08.6a1,1,0,0,1,.56,1.7l-3,2.88.7,4.06a1,1,0,0,1-.4,1A1,1,0,0,1,12.11,14.66ZM8,10.5a1,1,0,0,1,.47.12l2.32,1.21-.45-2.58a1,1,0,0,1,.29-.88l1.88-1.83-2.6-.38a1,1,0,0,1-.75-.55L8,3.26,6.84,5.61a1,1,0,0,1-.75.55l-2.6.38L5.37,8.37a1,1,0,0,1,.29.88l-.45,2.58,2.32-1.21A1,1,0,0,1,8,10.5Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-star.svg">Download SVG<span class="rvt-sr-only">, star icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-star.svg">Download SVG<span class="rvt-sr-only">, star icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
