--- a/icons/undo/index.html
+++ b/icons/undo/index.html
@@ -748,7 +748,7 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
   &lt;path fill=&quot;currentColor&quot; d=&quot;M8.32,1.61A6.64,6.64,0,0,0,4,3.21V2A1,1,0,0,0,2,2V6A1,1,0,0,0,3,7H7A1,1,0,0,0,7,5H5a4.68,4.68,0,1,1,3.29,8,1,1,0,1,0,0,2,6.68,6.68,0,0,0,0-13.36Z&quot;/&gt;
 &lt;/svg&gt;
 </code></pre>
-  <a class="button button--secondary" download href="icons/rvt-icon-undo.svg">Download SVG<span class="rvt-sr-only">, undo icon</span></a>
+  <a class="button button--secondary" download href="../../icons/rvt-icon-undo.svg">Download SVG<span class="rvt-sr-only">, undo icon</span></a>
 </div>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
