--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="https://assets.uits.iu.edu/css/rivet/1.8.1/rivet.min.css">
   <style>
   :root {
+    --rvt-color-black: #000000;
+    --rvt-color-black-5: #fafafa;
+    --rvt-color-black-90: #444444;
+    --rvt-color-blue-60: #006298;
+    --rvt-color-white: #ffffff;
   }
 
   body {
@@ -37,7 +42,7 @@
   }
 
   .ri-list__link:hover {
-    background-color: #f7f7f7;
+    background-color: var(--rvt-color-black-5);
   }
 
   .ri-code-block {
@@ -48,30 +53,14 @@
     padding: 1rem;
   }
 
-  .rvt-demo-switcher {
-    position: fixed;
-    right: 2rem;
-    top: 2rem;
-    background-color: #006298;
-    -webkit-appearance: none;
+  .ri-icon--interactive {
+    color: var(--rvt-color-blue-60);
   }
 
-  .inverted {
-    background-color: #222222;
-    color: #ffffff;
-  }
-
-  .inverted .rvt-icons-demo__title {
-    background-color: #333333;
-    color: #ffffff;
-  }
-
-  svg.rvt-icon {
-    display: block;
-    height: 1rem;
-    margin: 0 auto;
-    padding: 0;
-    width: 1rem;
+  .ri-icon--inverted {
+    border-color: var(--rvt-color-black);
+    background-color: var(--rvt-color-black-90);
+    color: var(--rvt-color-white);
   }
 </style>
 </head>
@@ -681,7 +670,7 @@ rvt-icon[icon="users-solid"] {
 <script>
 const prefix = 'rvt-icon'
 
-window.customElements.define(prefix, class RivetIcon extends HTMLElement {
+window.customElements.define(prefix, class RivetIconElement extends HTMLElement {
   static get observedAttributes() {
     return ['icon', 'icons'];
   }
@@ -714,8 +703,8 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
 
   <div class="rvt-container rvt-container--junior rvt-container--center">
     
-<h1 class="rvt-ts-46 rvt-text-bold">Rivet icons</h1>
-<p class="rvt-ts-20 rvt-m-top-none">Icons for the <a href="https://rivet.iu.edu/">Rivet Design System</a></p>
+<h1 class="rvt-ts-46 rvt-text-bold rvt-lh-title rvt-m-top-sm">Rivet icons</h1>
+<p class="rvt-ts-20">Icons for the <a href="https://rivet.iu.edu/">Rivet Design System</a></p>
 
     <h2 class="rvt-ts-sm rvt-text-bold rvt-m-top-lg rvt-p-top-lg rvt-border-top">Icons</h2>
 <ul class="ri-list rvt-m-top-sm">
@@ -1402,24 +1391,5 @@ window.customElements.define(prefix, class RivetIcon extends HTMLElement {
 </ul>
 
   </div>
-  <button class="rvt-demo-switcher rvt-button" id="switcher-button">
-  <span class="rvt-sr-only">Invert colors</span>
-  <svg class="rvt-icon">
-    <use xlink:href="./rivet-icons.svg#rvt-icon-transfer"></use>
-  </svg>
-</button>
-  <script src="https://cdn.jsdelivr.net/npm/svg4everybody@2.1.9/dist/svg4everybody.min.js"></script>
-<script>
-  // Toggles .inverted class on the body element
-  (function () {
-    const toggle = document.getElementById('switcher-button');
-
-    const handleClick = () => {
-      document.body.classList.toggle('inverted');
-    }
-
-    toggle.addEventListener('click', handleClick, false);
-  })();
-</script>
 </body>
 </html>
